[tool.poetry]
name = "purchase-processing-service"
version = "0.1.0"
description = ""
authors = ["Игнатенко Алексей <swagytor@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.3"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
pydantic = "^2.12.5"
python-dotenv = "^1.2.2"
asyncpg = "^0.31.0"
pydantic-settings = "^2.13.1"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
sqladmin = "^0.24.0"
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"
aiosqlite = "^0.22.1"


[tool.poetry.group.formatter.dependencies]
isort = "^8.0.1"
black = "^26.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
